kustomize/development/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kohesio-frontend-deployment
  labels:
    app: kohesio-frontend-deployment
spec:
  selector:
    matchLabels:
      app: kohesio-frontend-deployment
  template:
    metadata:
      labels:
        app: kohesio-frontend-deployment
    spec:
      imagePullSecrets:
      - name: regcred
      containers:
      - name: kohesio-frontend-container
        image: 294118183257.dkr.ecr.eu-west-1.amazonaws.com/kohesio-frontend-dev
        ports:
        - containerPort: 80
        livenessProbe:
          httpGet:
            path: /
            port: 80
        readinessProbe:
          httpGet:
            path: /
            port: 80
        resources:
          limits:
            cpu: 100m
            memory: 256Mi
          requests:
            cpu: 80m
            memory: 128Mi
